feat: Implement data access objects for employee, contact, and module management
- Refactored AccessDAO, ContactDAO, EmployeeAuditDAO, EmployeeParamDAO, and ModuleDAO to remove commented code and improve readability.
- Added SQL migration scripts to create and manage employee audit tables, triggers for insert, update, and delete operations, and views for auditing.
- Created procedures for inserting employees and managing contacts, modules, and accesses.
- Enhanced the database schema with new columns for access operations and relationships between employees, contacts, and modules.